--- a/website/pages/docs/core/TypedRoute.mdx
+++ b/website/pages/docs/core/TypedRoute.mdx
@@ -552,9 +552,9 @@ From above benchmark graph, you can see that `class-transformer` is extremely sl
   - `class-transformer` requires [DTO class with decorator function calls](https://github.com/samchon/typia/blob/master/benchmark/src/structures/class-validator/ClassValidatorObjectHierarchical.ts).
   - `fast-json-stringify` requires [JSON schema definition](https://github.com/samchon/typia/blob/master/test/schemas/json/swagger/ObjectHierarchical.json).
 
-![Stringify Function Benchmark](https://github.com/samchon/typia/raw/master/benchmark/results/11th%20Gen%20Intel(R)%20Core(TM)%20i5-1135G7%20%40%202.40GHz/images/stringify.svg)
+![Stringify Function Benchmark](https://github.com/samchon/typia/raw/master/benchmark/results/AMD%20Ryzen%209%207940HS%20w%20Radeon%20780M%20Graphics/images/stringify.svg)
 
-> Measured on [Intel i5-1135g7, Surface Pro 8](https://github.com/samchon/typia/tree/master/benchmark/results/11th%20Gen%20Intel(R)%20Core(TM)%20i5-1135G7%20%40%202.40GHz#stringify)
+> Measured on [AMD R9-7940HS, Rog Flow X13](https://github.com/samchon/typia/tree/master/benchmark/results/AMD%20Ryzen%209%207940HS%20w%20Radeon%20780M%20Graphics#stringify)
 
 ### Server
 Looking at above benchmark, someone may ask:
@@ -569,6 +569,6 @@ Most operations in NodeJS server are asynchronously executed in background threa
 
 I'll show you the benchmark result that, how JSON serizliation speed affects on the server performance.
 
-![Server Benchmark](https://raw.githubusercontent.com/samchon/nestia/master/benchmark/results/11th%20Gen%20Intel(R)%20Core(TM)%20i5-1135G7%20%40%202.40GHz/images/stringify.svg)
+![Server Benchmark](https://raw.githubusercontent.com/samchon/nestia/master/benchmark/results/AMD%20Ryzen%209%207940HS%20w%20Radeon%20780M%20Graphics/images/stringify.svg)
 
-> Measured on [Intel i5-1135g7, Surface Pro 8](https://github.com/samchon/nestia/tree/master/benchmark/results/11th%20Gen%20Intel(R)%20Core(TM)%20i5-1135G7%20%40%202.40GHz#stringify)
+> Measured on [AMD R9-7940HS, Rog Flow X13](https://github.com/samchon/nestia/tree/master/benchmark/results/AMD%20Ryzen%209%207940HS%20w%20Radeon%20780M%20Graphics#stringify)
