--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -54,8 +54,8 @@ Nestia is a set of helper libraries for [NestJS](https://docs.nestjs.com), suppo
     - SDK library generator for clients
     - Mockup Simulator for client developers
     - Automatic E2E test functions generator
-  - `@nestia/migrate`: Migration from Swagger to NestJS
-  - `@nestia/editor`: Online TypeScript Swagger Editor
+  - `@nestia/migrate`: OpenAPI generator from Swagger to NestJS
+  - `@nestia/editor`: Swagger-UI with Online TypeScript Editor
   - `nestia`: Just CLI (command line interface) tool
 
 <br/>
