--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -54,7 +54,7 @@ Nestia is a set of helper libraries for [NestJS](https://docs.nestjs.com), suppo
     - SDK library generator for clients
     - Mockup Simulator for client developers
     - Automatic E2E test functions generator
-  - `@nestia/migrate`: OpenAPI generator from Swagger to NestJS
+  - `@nestia/migrate`: OpenAPI generator from Swagger to NestJS/SDK
   - `@nestia/editor`: Swagger-UI with Online TypeScript Editor
   - `nestia`: Just CLI (command line interface) tool
 
